ghc-4335c07/testsuite/tests/annotations/should_compile/T13818/A.hs
{-# LANGUAGE DeriveDataTypeable #-}
module A where

import Data.Typeable
import Data.Data

data FromA = FromA
  deriving (Typeable, Data)
